--- a/BrightPath/Views/Image/Add.cshtml
+++ b/BrightPath/Views/Image/Add.cshtml
@@ -1,4 +1,4 @@
-﻿@model BrightPath.Models.Image
+﻿@model BrightPath.ViewModels.AddImageViewModel
 
 @{
     ViewData["Title"] = "Add";
@@ -10,16 +10,25 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Add" method="post" enctype="multipart/form-data">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            
-            <div class="form-group">
-                <label asp-for="ImagePath" class="control-label"></label>
-                <input type="file" asp-for="ImagePath"  name="ImageFile" required id="files" multiple /> 
-                <span asp-validation-for="ImagePath" class="text-danger"></span>
-            </div><br />
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+        <form asp-action="Post" method="post" class="form-horizontal" role="form" enctype="multipart/form-data">
+
+            <div class="form-horizontal leftMarginDefault">
+
+                <div class="form-group">
+                    <div>You image's title</div>
+                    <input asp-for="Title" class="form-control" />
+                </div>
+
+                <div class="form-group">
+                    <div>The image file</div>
+                    <input asp-for="Files" type="file" class="form-control" accept=".jpg,.jpeg" />
+                </div>
+
+                <div class="form-group">
+                    <div>
+                        <input type="submit" class="btn btn-primary" value="Add image" />
+                    </div>
+                </div>
             </div>
         </form>
     </div>
