--- a/BrightPath/Views/Article/Create.cshtml
+++ b/BrightPath/Views/Article/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model BrightPath.Models.Article
+﻿@model BrightPath.ViewModels.ViewModelBoth
+
 
 @{
     ViewData["Title"] = "Create";
@@ -14,42 +15,45 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create" method="post" enctype="multipart/form-data">
+        <form asp-action="Post" method="post" class="form-horizontal" role="form" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="ArticleTitle" class="control-label"></label>
-                <input asp-for="ArticleTitle" class="form-control" />
-                <span asp-validation-for="ArticleTitle" class="text-danger"></span>
+                <label asp-for="Article.ArticleTitle" class="control-label"></label>
+                <input asp-for="Article.ArticleTitle" class="form-control" />
+                <span asp-validation-for="Article.ArticleTitle" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="desc_mini" class="control-label"></label>
-                <input asp-for="desc_mini" class="form-control" />
-                <span asp-validation-for="desc_mini" class="text-danger"></span>
+                <label asp-for="Article.desc_mini" class="control-label"></label>
+                <input asp-for="Article.desc_mini" class="form-control" />
+                <span asp-validation-for="Article.desc_mini" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="desc" class="control-label"></label>
-                <input asp-for="desc" class="form-control" />
-                <span asp-validation-for="desc" class="text-danger"></span>
+                <label asp-for="Article.desc" class="control-label"></label>
+                <input asp-for="Article.desc" class="form-control" />
+                <span asp-validation-for="Article.desc" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ArticleAdress" class="control-label"></label>
-                <input asp-for="ArticleAdress" class="form-control" />
-                <span asp-validation-for="ArticleAdress" class="text-danger"></span>
+                <label asp-for="Article.ArticleAdress" class="control-label"></label>
+                <input asp-for="Article.ArticleAdress" class="form-control" />
+                <span asp-validation-for="Article.ArticleAdress" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Articlecoor" class="control-label"></label>
-                <input asp-for="Articlecoor" class="form-control" />
-                <span asp-validation-for="Articlecoor" class="text-danger"></span>
+                <label asp-for="Article.Articlecoor" class="control-label"></label>
+                <input asp-for="Article.Articlecoor" class="form-control" />
+                <span asp-validation-for="Article.Articlecoor" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ArticleContact" class="control-label"></label>
-                <input asp-for="ArticleContact" class="form-control" />
-                <span asp-validation-for="ArticleContact" class="text-danger"></span>
+                <label asp-for="Article.ArticleContact" class="control-label"></label>
+                <input asp-for="Article.ArticleContact" class="form-control" />
+                <span asp-validation-for="Article.ArticleContact" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ImagePath" class="control-label"></label>
-                <input type="file" name="Image File" required />
-                <span asp-validation-for="ImagePath" class="text-danger"></span>
+                <div>The image file</div>
+                <input asp-for="Files" type="file" accept=".jpg,.jpeg,.png" required />
+            </div>
+            <div class="form-group">
+                <div>The image file</div>
+                <input asp-for="Files" type="file" accept=".jpg,.jpeg,.png" required />
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
