--- a/BrightPath/Views/Article/Details.cshtml
+++ b/BrightPath/Views/Article/Details.cshtml
@@ -10,45 +10,63 @@
     <h4>Article</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.ArticleTitle)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.ArticleTitle)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.desc_mini)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.desc_mini)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.desc)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.desc)
+        <dd class="col-sm-10">
+            <p style="width:80%;word-wrap: break-word;">
+                @Html.DisplayFor(model => model.desc)
+            </p>
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.ArticleAdress)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.ArticleAdress)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Articlecoor)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Articlecoor)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.ArticleContact)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.ArticleContact)
         </dd>
-    </dl>
+
+
+        @if (Model.ImagePath != null)
+        {
+            <dt class="col-sm-2" >
+                @Html.DisplayNameFor(model => model.ImagePath)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.ImagePath)
+             </dd>
+            <dd class="col-sm-10">
+
+                <img src="~/Image/@Url.Content(Model.ImagePath)" width="250" height="250" />
+            </dd>
+            }
+
+        </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.ArticleId">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model.ArticleId">Edit</a> |<a asp-action="Delete" asp-route-id="@Model.ArticleId">Delete</a>|
     <a asp-action="Index">Back to List</a>
 </div>
