--- a/BrightPath/Views/Image/Add.cshtml
+++ b/BrightPath/Views/Image/Add.cshtml
@@ -21,7 +21,7 @@
 
                 <div class="form-group">
                     <div>The image file</div>
-                    <input asp-for="Files" type="file" class="form-control" accept=".jpg,.jpeg" />
+                    <input asp-for="Files" type="file" class="form-control" accept=".jpg,.jpeg,.png" />
                 </div>
 
                 <div class="form-group">
