--- a/BrightPath/wwwroot/css/site.css
+++ b/BrightPath/wwwroot/css/site.css
@@ -11,7 +11,7 @@ a.navbar-brand {
 -------------------------------------------------- */
 html {
   font-size: 14px;
-  
+  transition:ease all;
 }
 @media (min-width: 768px) {
   html {
@@ -77,6 +77,7 @@ button.accept-policy {
 
 /*side bar styling*/
 .side-container{
+    z-index:5000;
     float:right;
     height:15em;
     width:20em;
