shit just works

--- a/BrightPath/Views/Shared/_Layout.cshtml
+++ b/BrightPath/Views/Shared/_Layout.cshtml
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE html>
+﻿
+
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -29,6 +32,12 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
+                        <li>
+                            @using (Html.BeginForm("Index", "Article", FormMethod.Get))
+                            {
+                                @Html.TextBox("Searching")<input type="submit" value="Search" />
+                            }
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Article" asp-action="Index">Home</a>
                         </li>
