--- a/BrightPath/wwwroot/css/site.css
+++ b/BrightPath/wwwroot/css/site.css
@@ -114,13 +114,14 @@ body {
 }
 
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  /* Set the fixed height of the footer here */
-  height: 60px;
-  line-height: 60px; /* Vertically center the text there */
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    white-space: nowrap;
+    /* Set the fixed height of the footer here */
+    height: 60px;
+    line-height: 60px; /* Vertically center the text there */
+    box-shadow: 0 -0.25rem .75rem rgba(0, 0, 0, .1);
 }
 
 #files{
