--- a/Auth4/Views/Article/Details.cshtml
+++ b/Auth4/Views/Article/Details.cshtml
@@ -48,9 +48,14 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.ArticleContact)
         </dd>
-
-
-        @if (Model.ImagePath != null)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.AuthorName)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.AuthorName)
+        </dd>
+        
+        @if (Model.ImageName != null)
         {
             <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.ImagePath)
@@ -59,15 +64,15 @@
                 @Html.DisplayFor(model => model.ImagePath)
             </dd>
             <dd class="col-sm-10">
-
-                <img src="~/Image/@Url.Content(Model.ImagePath)" width="250" height="250" />
+               
+                <img src="~/Image/@Model.AuthorId/@Model.ArticleTitle/@Url.Content(Model.ImageName)" width="250" height="250" />
             </dd>
         }
 
     </dl>
 </div>
-<div>@if (User.Identity.IsAuthenticated) { 
-    <a asp-action="Edit" asp-route-id="@Model.ArticleId">Edit</a> <br /> <a asp-action="Delete" asp-route-id="@Model.ArticleId">Delete</a>
+<div>@if (User.Identity.IsAuthenticated || User.Identity.Name=="Admin" ) { 
+    <a asp-action="Edit" asp-route-id="@Model.ArticleId">Edit</a> <br /> <a asp-action="Delete" asp-route-id="@Model.ArticleId">Delete</a><br />
     }
     <a asp-action="Index">Back to List</a>
 </div>
