--- a/Auth4/Views/Article/Details.cshtml
+++ b/Auth4/Views/Article/Details.cshtml
@@ -54,7 +54,13 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.AuthorName)
         </dd>
-        
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.AuthorId)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.AuthorId)
+        </dd>
+
         @if (Model.ImageName != null)
         {
             <dt class="col-sm-2">
@@ -64,8 +70,8 @@
                 @Html.DisplayFor(model => model.ImagePath)
             </dd>
             <dd class="col-sm-10">
-               
-                <img src="~/Image/@Model.AuthorId/@Model.ArticleTitle/@Url.Content(Model.ImageName)" width="250" height="250" />
+
+                <img src="~/Image/@Model.AuthorId/@Model.ArticleId/@Url.Content(Model.ImageName)" width="250" height="250" />
             </dd>
         }
 
