--- a/Auth4/Views/Auth/Login.cshtml
+++ b/Auth4/Views/Auth/Login.cshtml
@@ -5,7 +5,7 @@
 
 }
 
-<!--<form asp-controller="Auth" asp-action="Login" method="post">
+<form asp-controller="Auth" asp-action="Login" method="post">
     <div>
         <label>Username</label>
         <input asp-for="UserName" />
@@ -16,4 +16,4 @@
     </div>
     <input type="submit" value="Sign In" />
 
-</form>-->
+</form>
