root can now create admins

--- a/Auth4/Views/Article/Details.cshtml
+++ b/Auth4/Views/Article/Details.cshtml
@@ -77,7 +77,7 @@
 
     </dl>
 </div>
-<div>@if (User.Identity.IsAuthenticated && (User.Identity.Name == Model.AuthorName || User.Identity.Name=="Root" || User.IsInRole("Admin"))) {
+<div>@if (User.Identity.IsAuthenticated && (User.Identity.Name == Model.AuthorName || User.IsInRole("Root") || User.IsInRole("Admin"))) {
     <a asp-action="Edit" asp-route-id="@Model.ArticleId">Edit</a> <br /> <a asp-action="Delete" asp-route-id="@Model.ArticleId">Delete</a><br />
     }
     <a asp-action="Index">Back to List</a>
