--- a/Auth4/Areas/Identity/Pages/Account/AdminLogin.cshtml
+++ b/Auth4/Areas/Identity/Pages/Account/AdminLogin.cshtml
@@ -9,8 +9,13 @@
 <div class="row">
     <div class="col-md-4">
         <section>
+            <br />
+            <br />
+            <br />
+            <br />
+            <br />
             <form id="account" method="post">
-                <h4>Use a local account to log in.</h4>
+                <h4>This is only for admins</h4>
                 <hr />
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
@@ -34,14 +39,7 @@
                 <div class="form-group">
                     <button type="submit" class="btn btn-primary">Log in</button>
                 </div>
-                <div class="form-group">
-                    <p>
-                        <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
-                    </p>
-                    <p>
-                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
-                    </p>
-                </div>
+                
             </form>
         </section>
     </div>
