--- a/Auth4/Areas/Identity/Pages/Account/AccessDenied.cshtml
+++ b/Auth4/Areas/Identity/Pages/Account/AccessDenied.cshtml
@@ -4,7 +4,12 @@
     ViewData["Title"] = "Access denied";
 }
 
-<header>
+<section>
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
     <h1 class="text-danger">@ViewData["Title"]</h1>
     <p class="text-danger">You do not have access to this resource.</p>
-</header>
+</section>
