--- a/Auth4/Areas/Identity/Pages/Account/Manage/AdminRegister.cshtml
+++ b/Auth4/Areas/Identity/Pages/Account/Manage/AdminRegister.cshtml
@@ -2,6 +2,7 @@
 @model AdminRegisterModel
 @{
     ViewData["Title"] = "Register";
+    ViewData["ActivePage"] = ManageNavPages.AddAdmin;
 }
 
 <h1>@ViewData["Title"]</h1>
@@ -13,7 +14,7 @@
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
-                <label >Name</label>
+                <label>Name</label>
                 <input asp-for="Input.Email" class="form-control" />
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
