--- a/Auth4/Areas/Identity/Pages/Account/Manage/DeleteUsers.cshtml
+++ b/Auth4/Areas/Identity/Pages/Account/Manage/DeleteUsers.cshtml
@@ -19,14 +19,17 @@
         </tr>
         </thead>
     <tbody>
-        @foreach(var item in Model.UserList){
+        @foreach(var item in Model.Users){
 
         <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.UserId)
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.UserName)
             </td>
             <td>
-                <a asp-action="Delete" asp-route-id="@item.ID">delete</a>
+                <a asp-page="./Delete" asp-route-id="@item.UserId">Delete</a>
             </td>
         </tr>
          }
