--- a/Auth4/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/Auth4/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -9,11 +9,11 @@
     {
         <li id="external-logins" class="nav-item"><a id="external-login" class="nav-link @ManageNavPages.ExternalLoginsNavClass(ViewContext)" asp-page="./ExternalLogins">External logins</a></li>
     }
-    <li class="nav-item"><a class="nav-link @ManageNavPages.TwoFactorAuthenticationNavClass(ViewContext)" id="two-factor" asp-page="./TwoFactorAuthentication">Two-factor authentication</a></li>
+    
     <li class="nav-item"><a class="nav-link @ManageNavPages.PersonalDataNavClass(ViewContext)" id="personal-data" asp-page="./PersonalData">Personal data</a></li>
     @if (User.IsInRole("Root"))
     {
-        <li class="nav-item"><a class="nav-link @ManageNavPages.AddAdminNavClass(ViewContext)" id="two-factor" asp-page="./AdminRegister">Add Admin</a></li>
-        <li class="nav-item"><a class="nav-link @ManageNavPages.DeleteUserNavClass(ViewContext)" id="two-factor" asp-page="./DeleteUsers">Delete Users</a></li>
+        <li class="nav-item"><a class="nav-link @ManageNavPages.AddAdminNavClass(ViewContext)" id="Add-Admin" asp-page="./AdminRegister">Add Admin</a></li>
+        <li class="nav-item"><a class="nav-link @ManageNavPages.ManageUserNavClass(ViewContext)" id="Manage-User" asp-page="./ManageUsers">Manage Users</a></li>
     }
 </ul>
