--- a/Auth4/Views/Article/Details.cshtml
+++ b/Auth4/Views/Article/Details.cshtml
@@ -78,7 +78,8 @@
     </dl>
 </div>
 <div>@if (User.Identity.IsAuthenticated && (User.Identity.Name == Model.AuthorName || User.IsInRole("Root") || User.IsInRole("Admin"))) {
-    <a asp-action="Edit" asp-route-id="@Model.ArticleId">Edit</a> <br /> <a asp-action="Delete" asp-route-id="@Model.ArticleId">Delete</a><br />
+    <a asp-action="Edit" asp-route-id="@Model.ArticleId">Edit</a> <br /> <a asp-controller="Review" asp-action="ReviewRequest" asp-route-id="@Model.ArticleId">Delete</a><br />
     }
-    <a asp-action="Index">Back to List</a>
+@if (!User.IsInRole("Muted")) { 
+    <a asp-action="Index">Back to List</a>}
 </div>
