--- a/Auth4/Views/Article/DeleteRequest.cshtml
+++ b/Auth4/Views/Article/DeleteRequest.cshtml
@@ -22,6 +22,7 @@
                 <label class="control-label">
                     Reason here nigga
                 </label>
+                @*sending data from view to controller directly (in the parameters)*@
                 <textarea class="form-control" id="reason" name="reason" >
 
                      @ViewData["reason"]
