--- a/Auth4/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/Auth4/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -21,5 +21,6 @@
     {
         <li class="nav-item"><a class="nav-link @ManageNavPages.ManageDeleteRequestNavClass(ViewContext)" id="Manage-Delete-Request" asp-page="./ManageDeleteRequest">Manage Delete Requests</a></li>
         <li class="nav-item"><a class="nav-link @ManageNavPages.ApprovalsNavClass(ViewContext)" id="Approvals" asp-page="./Approvals">Manage Creations</a></li>
+        <li class="nav-item"><a class="nav-link @ManageNavPages.ManageEditRequestNavClass(ViewContext)" id="Manage-Edit-Request" asp-page="./ManageEditRequest">Manage Edit Requests</a></li>
     }
 </ul>
