--- a/Auth4/Views/Article/Details.cshtml
+++ b/Auth4/Views/Article/Details.cshtml
@@ -61,7 +61,7 @@
             @Html.DisplayFor(model => model.AuthorId)
         </dd><br />
         <dd class="col-sm-6">
-            <div id="google-maps"> </div>
+            <div id="google-maps" style="height:400px;"></div>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
             <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA90TINkNOQX2-7jXdPEVrzi1-FjpKh8kA"></script>
             <script>
