map now works and loads from db

--- a/Auth4/Views/Article/Create.cshtml
+++ b/Auth4/Views/Article/Create.cshtml
@@ -38,9 +38,14 @@
                 <span asp-validation-for="Article.ArticleAdress" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Article.Articlecoor" class="control-label"></label>
-                <input asp-for="Article.Articlecoor" class="form-control" />
-                <span asp-validation-for="Article.Articlecoor" class="text-danger"></span>
+                <label asp-for="Article.ArticleLat" class="control-label"></label>
+                <input asp-for="Article.ArticleLat" class="form-control" />
+                <span asp-validation-for="Article.ArticleLat" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Article.ArticleLng" class="control-label"></label>
+                <input asp-for="Article.ArticleLng" class="form-control" />
+                <span asp-validation-for="Article.ArticleLng" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Article.ArticleContact" class="control-label"></label>
