--- a/Auth4/Views/Article/Delete.cshtml
+++ b/Auth4/Views/Article/Delete.cshtml
@@ -36,10 +36,16 @@
             @Html.DisplayFor(model => model.ArticleAdress)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Articlecoor)
+            @Html.DisplayNameFor(model => model.ArticleLat)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Articlecoor)
+            @Html.DisplayFor(model => model.ArticleLat)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.ArticleLng)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.ArticleLng)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.ArticleContact)
