--- a/Auth4/Views/Article/Index.cshtml
+++ b/Auth4/Views/Article/Index.cshtml
@@ -34,7 +34,10 @@
                 @Html.DisplayNameFor(model => model.ArticleAdress)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Articlecoor)
+                @Html.DisplayNameFor(model => model.ArticleLat)
+            </th>
+    <th>
+                @Html.DisplayNameFor(model => model.ArticleLng)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.ArticleContact)
@@ -59,7 +62,10 @@
                     @Html.DisplayFor(modelItem => item.ArticleAdress)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Articlecoor)
+                    @Html.DisplayFor(modelItem => item.ArticleLat)
+                </td>
+    <td>
+                    @Html.DisplayFor(modelItem => item.ArticleLng)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.ArticleContact)
