--- a/Auth4/Views/Article/EditRequest.cshtml
+++ b/Auth4/Views/Article/EditRequest.cshtml
@@ -34,9 +34,14 @@
                 <span asp-validation-for="ViewModelBoth.Article.ArticleAdress" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ViewModelBoth.Article.Articlecoor" class="control-label"></label>
-                <input asp-for="ViewModelBoth.Article.Articlecoor" class="form-control" />
-                <span asp-validation-for="ViewModelBoth.Article.Articlecoor" class="text-danger"></span>
+                <label asp-for="ViewModelBoth.Article.ArticleLat" class="control-label"></label>
+                <input asp-for="ViewModelBoth.Article.ArticleLat" class="form-control" />
+                <span asp-validation-for="ViewModelBoth.Article.ArticleLat" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ViewModelBoth.Article.ArticleLng" class="control-label"></label>
+                <input asp-for="ViewModelBoth.Article.ArticleLng" class="form-control" />
+                <span asp-validation-for="ViewModelBoth.Article.ArticleLng" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ViewModelBoth.Article.ArticleContact" class="control-label"></label>
@@ -48,7 +53,7 @@
                 <input asp-for="ViewModelBoth.Files" type="file" accept=".jpg,.jpeg,.png" />
             </div>
             <div class="form-group">
-                
+
                 <button type="submit" asp-controller="Review" asp-action="CreateEdited" asp-route-id="@Model.ViewModelBoth.Article.ArticleId">Submit Edit Request</button>
             </div>
         </form>
