--- a/Auth4/Views/Article/Create.cshtml
+++ b/Auth4/Views/Article/Create.cshtml
@@ -29,7 +29,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Article.desc" class="control-label"></label>
-                <input asp-for="Article.desc" class="form-control" />
+                <textarea type="text"asp-for="Article.desc" class="form-control" ></textarea>
                 <span asp-validation-for="Article.desc" class="text-danger"></span>
             </div>
             <div class="form-group">
